# bokehrendering

./: ProjectHome.md
resources/book/: BokehRendering.bib  BokehRendering.tex  BokehRenderingMacro.tex  akpbib.bst  instructions.tex  main.tex
resources/book/DerousiersFigs/: performances.dat~  plot.gp~
resources/models/cobra/: cobra.mtl
resources/models/f14/: f14.mtl
resources/scenes/: desert.json  tank.json
resources/shaders/: bilateral.fs  bokeh.fs  bokeh.gs  bokeh.vs  bokehblurpoisson.vs  bokehcoc.vs  bokehdetection.fs  bokehrendering.fs  bokehrendering.gs  bokehrendering.vs  bokehsynchronization.fs  csmbuilder.fs  csmbuilder.vs  csmrenderer.fs  cubemap.fs  cubemap.vs  dof.fs  dof2.fs  dofextract.fs  dofextract.vs  dofrender.fs  gbuffer.fs  gbuffer.vs  helper.fs  helper.vs  meshregular.fs  meshterrain.es  meshterrain.fs  meshterrain.gs  nightskybuilder.gs  nightstarbuilder.gs  nightstarbuilder.vs  probe.fs  shbuilder.gs  shbuilder.vs  shrenderer.vs  skybuilder.fs  skybuilder.gs  skybuilder.vs  ssao.fs  (+5 more)
src/: CMakeLists.txt  mainbokeh.cpp
src/glf/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer.inl  camera.cpp  csm.cpp  csm.hpp  debug.hpp  dof.cpp  dof.hpp  dof2.cpp  dof2.hpp  dofprocessor.cpp  dofprocessor.hpp  font.cpp  font.hpp  gbuffer.cpp  geometry.cpp  geometry.hpp  helper.cpp  ioimage.cpp  iomodel.cpp  iomodel.hpp  pass.cpp  pass.hpp  postprocessor.cpp  postprocessor.hpp  probe.cpp  probe.hpp  scene.cpp  scene.hpp  sh.cpp  sh.hpp  sky.cpp  sky.hpp  ssao.cpp  ssao.hpp  terrain.cpp  terrain.hpp  texture.cpp  (+11 more)
src/glf/io/: CMakeLists.txt  config.hpp  image.cpp  image.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp
src/glui/: context.cpp  context.hpp  painter.cpp  widgets.cpp  widgets.hpp
trunk/resources/book/: BokehRendering.bib  BokehRendering.tex  BokehRenderingMacro.tex  DerousiersMacros.tex  Makefile  akpbook.sty  compile.sh  float.sty  instructions.tex  main.tex
trunk/resources/book/DerousiersFigs/: montage2.xcf
trunk/resources/configs/: config.json
trunk/resources/models/barrel/: barrel.mtl
trunk/resources/models/tank/: tank.mtl
trunk/resources/scenes/: f14.json  tank.json
trunk/resources/shaders/: averageluminance.fs  averageluminance.vs  bilateral.fs  bokeh.gs  bokeh.vs  bokehblur.fs  bokehblurpoisson.fs  bokehblurpoisson.vs  bokehcoc.fs  bokehdetection.fs  bokehrendering.fs  bokehrendering.vs  bokehreset.fs  bokehsynchronization.vs  brdf.fs  csm.fs  csmbuilder.gs  csmbuilder.vs  csmrenderer.fs  csmrenderer.vs  cubemap.fs  cubemap.vs  dof.fs  dofrender.vs  gbuffer.fs  gbuffer.vs  light.vs  meshterrain.vs  nightskybuilder.fs  nightstarbuilder.fs  probe.fs  probe.vs  shbuilder.fs  shbuilder.gs  shrenderer.fs  skybuilder.fs  skybuilder.vs  ssao.fs  surface.vs  tonemap.fs  (+1 more)
trunk/src/: CMakeLists.txt  mainbokeh.cpp
trunk/src/glf/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer.inl  camera.cpp  csm.cpp  csm.hpp  debug.hpp  dof.cpp  dof.hpp  dof2.cpp  dof2.hpp  dofprocessor.cpp  dofprocessor.hpp  font.cpp  gbuffer.hpp  geometry.hpp  helper.cpp  helper.hpp  ioimage.cpp  ioimage.hpp  iomodel.cpp  light.cpp  light.hpp  pass.cpp  pass.hpp  postprocessor.cpp  probe.cpp  scene.cpp  sh.cpp  sh.hpp  sky.cpp  sky.hpp  ssao.cpp  ssao.hpp  tessellation.cpp  tessellation.hpp  texture.cpp  timing.cpp  timing.hpp  (+7 more)
trunk/src/glf/io/: config.cpp  config.hpp  image.cpp  model.cpp  model.hpp  scene.cpp
trunk/src/glui/: CMakeLists.txt  arial12.hpp  context.cpp  font.cpp  font.hpp  font.inl  painter.cpp  painter.hpp
